--- a/feedback/Web.config
+++ b/feedback/Web.config
@@ -69,7 +69,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="feedbackDBEntities" connectionString="metadata=res://*/Models.FeedbackModel.csdl|res://*/Models.FeedbackModel.ssdl|res://*/Models.FeedbackModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-PROMJSU;initial catalog=feedbackDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="feedbackDBEntities" connectionString="metadata=res://*/Models.FeedbackModel.csdl|res://*/Models.FeedbackModel.ssdl|res://*/Models.FeedbackModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=feedbackDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.codedom>
     <compilers>
